--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.5",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "modern-normalize": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "redux-persist": "^6.0.0"
+    "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
